"report check in 2018-09-16"

--- a/stuwork/1amsmith1020.think-java_results.html
+++ b/stuwork/1amsmith1020.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] 1amsmith1020
-[REUSING WORK]: ./stuwork/1amsmith1020/think-java-1amsmith1020
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/1amsmith1020
+[FRESH & CLEAN] @ ./stuwork/1amsmith1020/think-java-1amsmith1020
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-1amsmith1020.git]
+Cloning into 'think-java-1amsmith1020'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -39,10 +45,12 @@ Seconds since midnight:39494
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
