--- a/stuwork/AdamRashid.think-java_results.html
+++ b/stuwork/AdamRashid.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[REUSING WORK]: ./stuwork/AdamRashid/think-java-AdamRashid
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/AdamRashid
+[FRESH & CLEAN] @ ./stuwork/AdamRashid/think-java-AdamRashid
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
+Cloning into 'think-java-AdamRashid'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -39,7 +45,8 @@ Seconds since midnight:
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -56,14 +63,15 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 71
-	You were off by: 58
+	The number I was thinking of is: 24
+	You were off by: 11
 	
 <--
 	[OUTPUT OK]
 
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
