--- a/stuwork/Fwuff547.think-java_results.html
+++ b/stuwork/Fwuff547.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Fwuff547
-[REUSING WORK]: ./stuwork/Fwuff547/think-java-Fwuff547
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/Fwuff547
+[FRESH & CLEAN] @ ./stuwork/Fwuff547/think-java-Fwuff547
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Fwuff547.git]
+Cloning into 'think-java-Fwuff547'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -33,13 +39,15 @@ Seconds since midnight: 42630
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
