--- a/stuwork/aliyaaware.think-java_results.html
+++ b/stuwork/aliyaaware.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] aliyaaware
-[REUSING WORK]: ./stuwork/aliyaaware/think-java-aliyaaware
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/aliyaaware
+[FRESH & CLEAN] @ ./stuwork/aliyaaware/think-java-aliyaaware
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-aliyaaware.git]
+Cloning into 'think-java-aliyaaware'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -35,7 +41,8 @@ American format:
 	3 errors
 	
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -45,7 +52,8 @@ American format:
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
