--- a/stuwork/jadenngo13.think-java_results.html
+++ b/stuwork/jadenngo13.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] jadenngo13
-[REUSING WORK]: ./stuwork/jadenngo13/think-java-jadenngo13
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/jadenngo13
+[FRESH & CLEAN] @ ./stuwork/jadenngo13/think-java-jadenngo13
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-jadenngo13.git]
+Cloning into 'think-java-jadenngo13'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -44,7 +50,8 @@ American Format:
 	6 errors
 	
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -59,14 +66,15 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 23
-	You were off by: 10
+	The number I was thinking of was: 50
+	You were off by: 37
 	
 <--
 	[OUTPUT OK]
 
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
