--- a/stuwork/shanebaxter101.think-java_results.html
+++ b/stuwork/shanebaxter101.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] shanebaxter101
-[REUSING WORK]: ./stuwork/shanebaxter101/think-java-shanebaxter101
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/shanebaxter101
+[FRESH & CLEAN] @ ./stuwork/shanebaxter101/think-java-shanebaxter101
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-shanebaxter101.git]
+Cloning into 'think-java-shanebaxter101'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -35,13 +41,15 @@ It has been: 42812.0 seconds since midnight
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
