--- a/stuwork/slammensam.think-java_results.html
+++ b/stuwork/slammensam.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] slammensam
-[REUSING WORK]: ./stuwork/slammensam/think-java-slammensam
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/slammensam
+[FRESH & CLEAN] @ ./stuwork/slammensam/think-java-slammensam
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-slammensam.git]
+Cloning into 'think-java-slammensam'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -31,10 +37,12 @@ American Date:
 	1 error
 	
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
