--- a/stuwork/Crevin921.think-java_results.html
+++ b/stuwork/Crevin921.think-java_results.html
@@ -7,18 +7,26 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Crevin921
-[REUSING WORK]: ./stuwork/Crevin921/think-java-Crevin921
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/Crevin921
+[FRESH & CLEAN] @ ./stuwork/Crevin921/think-java-Crevin921
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Crevin921.git]
+Cloning into 'think-java-Crevin921'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[ERROR] Missing Compile Target:Date.java
 [COMPILING] Time.java
 	[ERROR] Missing Compile Target:Time.java
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
