--- a/stuwork/DrKiefer.think-java_results.html
+++ b/stuwork/DrKiefer.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] DrKiefer
-[REUSING WORK]: ./stuwork/DrKiefer/think-java-DrKiefer
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/DrKiefer
+[FRESH & CLEAN] @ ./stuwork/DrKiefer/think-java-DrKiefer
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-DrKiefer.git]
+Cloning into 'think-java-DrKiefer'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -33,7 +39,8 @@ Time Since Midnight: 12: 0: 21
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -47,7 +54,8 @@ Time Since Midnight: 12: 0: 21
 	[ERROR] Runtime Error @ java Exercise4
 
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
