--- a/stuwork/Jake4902.think-java_results.html
+++ b/stuwork/Jake4902.think-java_results.html
@@ -7,18 +7,26 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Jake4902
-[REUSING WORK]: ./stuwork/Jake4902/think-java-Jake4902
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/Jake4902
+[FRESH & CLEAN] @ ./stuwork/Jake4902/think-java-Jake4902
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Jake4902.git]
+Cloning into 'think-java-Jake4902'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
