--- a/stuwork/Marcus620.think-java_results.html
+++ b/stuwork/Marcus620.think-java_results.html
@@ -7,15 +7,23 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Marcus620
-[REUSING WORK]: ./stuwork/Marcus620/think-java-Marcus620
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/Marcus620
+[FRESH & CLEAN] @ ./stuwork/Marcus620/think-java-Marcus620
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
+Cloning into 'think-java-Marcus620'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
