--- a/stuwork/MegaMichael1000.think-java_results.html
+++ b/stuwork/MegaMichael1000.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] MegaMichael1000
-[REUSING WORK]: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/MegaMichael1000
+[FRESH & CLEAN] @ ./stuwork/MegaMichael1000/think-java-MegaMichael1000
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-MegaMichael1000.git]
+Cloning into 'think-java-MegaMichael1000'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -33,10 +39,12 @@ Seconds since midnight: 44520.0
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
