--- a/stuwork/NickPoletti1.think-java_results.html
+++ b/stuwork/NickPoletti1.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] NickPoletti1
-[REUSING WORK]: ./stuwork/NickPoletti1/think-java-NickPoletti1
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/NickPoletti1
+[FRESH & CLEAN] @ ./stuwork/NickPoletti1/think-java-NickPoletti1
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-NickPoletti1.git]
+Cloning into 'think-java-NickPoletti1'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -39,7 +45,8 @@ Time!
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -60,14 +67,15 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 36
-	Your guess was off by: 23
+	The number I was thinking of was 8
+	Your guess was off by: -5
 	
 <--
 	[OUTPUT OK]
 
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
