--- a/stuwork/ReidLuhn.think-java_results.html
+++ b/stuwork/ReidLuhn.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] ReidLuhn
-[REUSING WORK]: ./stuwork/ReidLuhn/think-java-ReidLuhn
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/ReidLuhn
+[FRESH & CLEAN] @ ./stuwork/ReidLuhn/think-java-ReidLuhn
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-ReidLuhn.git]
+Cloning into 'think-java-ReidLuhn'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -34,7 +40,8 @@ Hello world!
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -48,7 +55,8 @@ Hello world!
 	[ERROR] Runtime Error @ java Exercise4
 
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
