--- a/stuwork/asianaaron2.think-java_results.html
+++ b/stuwork/asianaaron2.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[REUSING WORK]: ./stuwork/asianaaron2/think-java-asianaaron2
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/asianaaron2
+[FRESH & CLEAN] @ ./stuwork/asianaaron2/think-java-asianaaron2
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
+Cloning into 'think-java-asianaaron2'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -36,13 +42,15 @@ The number of seconds since midnight: 83505seconds
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
