--- a/stuwork/banjojeebus.think-java_results.html
+++ b/stuwork/banjojeebus.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] banjojeebus
-[REUSING WORK]: ./stuwork/banjojeebus/think-java-banjojeebus
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/banjojeebus
+[FRESH & CLEAN] @ ./stuwork/banjojeebus/think-java-banjojeebus
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
+Cloning into 'think-java-banjojeebus'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -31,10 +37,12 @@ Seconds remaining: 39870
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
