--- a/stuwork/bealarson82.think-java_results.html
+++ b/stuwork/bealarson82.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] bealarson82
-[REUSING WORK]: ./stuwork/bealarson82/think-java-bealarson82
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/bealarson82
+[FRESH & CLEAN] @ ./stuwork/bealarson82/think-java-bealarson82
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
+Cloning into 'think-java-bealarson82'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -30,10 +36,12 @@ Hello World!
 [COMPILING] Time.java
 	[SUCCESSFUL COMPILE] Time.java
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
