--- a/stuwork/bethtojatjar.think-java_results.html
+++ b/stuwork/bethtojatjar.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] bethtojatjar
-[REUSING WORK]: ./stuwork/bethtojatjar/think-java-bethtojatjar
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/bethtojatjar
+[FRESH & CLEAN] @ ./stuwork/bethtojatjar/think-java-bethtojatjar
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-bethtojatjar.git]
+Cloning into 'think-java-bethtojatjar'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -34,10 +40,12 @@ The amount of seconds since midnight is: 39780 seconds
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
