--- a/stuwork/coleschomer.think-java_results.html
+++ b/stuwork/coleschomer.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] coleschomer
-[REUSING WORK]: ./stuwork/coleschomer/think-java-coleschomer
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/coleschomer
+[FRESH & CLEAN] @ ./stuwork/coleschomer/think-java-coleschomer
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-coleschomer.git]
+Cloning into 'think-java-coleschomer'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -25,10 +31,12 @@ American Format:
 [COMPILING] Time.java
 	[ERROR] Missing Compile Target:Time.java
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
