--- a/stuwork/gaberoessler.think-java_results.html
+++ b/stuwork/gaberoessler.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] gaberoessler
-[REUSING WORK]: ./stuwork/gaberoessler/think-java-gaberoessler
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/gaberoessler
+[FRESH & CLEAN] @ ./stuwork/gaberoessler/think-java-gaberoessler
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
+Cloning into 'think-java-gaberoessler'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -38,10 +44,12 @@ Tuesday
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
