--- a/stuwork/heypoppins.think-java_results.html
+++ b/stuwork/heypoppins.think-java_results.html
@@ -7,15 +7,23 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] heypoppins
-[REUSING WORK]: ./stuwork/heypoppins/think-java-heypoppins
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/heypoppins
+[FRESH & CLEAN] @ ./stuwork/heypoppins/think-java-heypoppins
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-heypoppins.git]
+Cloning into 'think-java-heypoppins'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
