--- a/stuwork/kaifouts.think-java_results.html
+++ b/stuwork/kaifouts.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] kaifouts
-[REUSING WORK]: ./stuwork/kaifouts/think-java-kaifouts
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/kaifouts
+[FRESH & CLEAN] @ ./stuwork/kaifouts/think-java-kaifouts
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
+Cloning into 'think-java-kaifouts'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -33,10 +39,12 @@ Time:
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 
