--- a/stuwork/maxckaeh.think-java_results.html
+++ b/stuwork/maxckaeh.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] maxckaeh
-[REUSING WORK]: ./stuwork/maxckaeh/think-java-maxckaeh
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/maxckaeh
+[FRESH & CLEAN] @ ./stuwork/maxckaeh/think-java-maxckaeh
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-maxckaeh.git]
+Cloning into 'think-java-maxckaeh'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -34,13 +40,15 @@ American Format:
 	[OUTPUT OK]
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
