--- a/stuwork/notswett.think-java_results.html
+++ b/stuwork/notswett.think-java_results.html
@@ -7,15 +7,23 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] notswett
-[REUSING WORK]: ./stuwork/notswett/think-java-notswett
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/notswett
+[FRESH & CLEAN] @ ./stuwork/notswett/think-java-notswett
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-notswett.git]
+Cloning into 'think-java-notswett'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
