--- a/stuwork/tpipitone.think-java_results.html
+++ b/stuwork/tpipitone.think-java_results.html
@@ -7,9 +7,15 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] tpipitone
-[REUSING WORK]: ./stuwork/tpipitone/think-java-tpipitone
-[GITWORK] Rusing code.
-[BEGIN chapter2]
+[SETUP] Creating student dir:  ./stuwork/tpipitone
+[FRESH & CLEAN] @ ./stuwork/tpipitone/think-java-tpipitone
+[GITWORK]
+[Attempting DL:https://github.com/SwettSoquelHS/think-java-tpipitone.git]
+Cloning into 'think-java-tpipitone'...
+	
+[GITWORK DONE]
+
+*[BEGIN chapter2]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -30,13 +36,15 @@ Tuesday
 	[ERROR] Runtime Error @ java Time
 
 [DONE chapter2]
-[BEGIN chapter3]
+
+*[BEGIN chapter3]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [DONE chapter3]
-[BEGIN chapter4]
+
+*[BEGIN chapter4]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
