"report check in 2018-09-16"

--- a/stuwork/AdamRashid.think-java_results.html
+++ b/stuwork/AdamRashid.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[SETUP] Creating student dir:  ./stuwork/AdamRashid
-[FRESH & CLEAN] @ ./stuwork/AdamRashid/think-java-AdamRashid
+[CLEANUP] Removing project dir: ./stuwork/AdamRashid/think-java-AdamRashid
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
 Cloning into 'think-java-AdamRashid'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-AdamRashid'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -44,9 +44,11 @@ Seconds since midnight:
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -63,19 +65,24 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 24
-	You were off by: 11
+	The number I was thinking of is: 37
+	You were off by: 24
 	
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.60
 
 </pre></body></html>
