--- a/stuwork/NickPoletti1.think-java_results.html
+++ b/stuwork/NickPoletti1.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] NickPoletti1
-[SETUP] Creating student dir:  ./stuwork/NickPoletti1
-[FRESH & CLEAN] @ ./stuwork/NickPoletti1/think-java-NickPoletti1
+[CLEANUP] Removing project dir: ./stuwork/NickPoletti1/think-java-NickPoletti1
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-NickPoletti1.git]
 Cloning into 'think-java-NickPoletti1'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-NickPoletti1'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -44,9 +44,11 @@ Time!
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -67,19 +69,24 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 8
-	Your guess was off by: -5
+	The number I was thinking of was 25
+	Your guess was off by: 12
 	
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.60
 
 </pre></body></html>
