--- a/stuwork/asianaaron2.think-java_results.html
+++ b/stuwork/asianaaron2.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[SETUP] Creating student dir:  ./stuwork/asianaaron2
-[FRESH & CLEAN] @ ./stuwork/asianaaron2/think-java-asianaaron2
+[CLEANUP] Removing project dir: ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
 Cloning into 'think-java-asianaaron2'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-asianaaron2'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -41,17 +41,23 @@ The number of seconds since midnight: 83505seconds
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
 
 </pre></body></html>
