--- a/stuwork/gaberoessler.think-java_results.html
+++ b/stuwork/gaberoessler.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] gaberoessler
-[SETUP] Creating student dir:  ./stuwork/gaberoessler
-[FRESH & CLEAN] @ ./stuwork/gaberoessler/think-java-gaberoessler
+[CLEANUP] Removing project dir: ./stuwork/gaberoessler/think-java-gaberoessler
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
 Cloning into 'think-java-gaberoessler'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-gaberoessler'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -43,17 +43,23 @@ Tuesday
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
 
 </pre></body></html>
