--- a/stuwork/Crevin921.think-java_results.html
+++ b/stuwork/Crevin921.think-java_results.html
@@ -7,7 +7,6 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Crevin921
-[SETUP] Creating student dir:  ./stuwork/Crevin921
 [FRESH & CLEAN] @ ./stuwork/Crevin921/think-java-Crevin921
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Crevin921.git]
@@ -16,18 +15,24 @@ Cloning into 'think-java-Crevin921'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[ERROR] Missing Compile Target:Date.java
 [COMPILING] Time.java
 	[ERROR] Missing Compile Target:Time.java
+[SUMMARY] ['Date: MISSING', 'Time: MISSING']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.00
 
 </pre></body></html>
