--- a/stuwork/Fwuff547.think-java_results.html
+++ b/stuwork/Fwuff547.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Fwuff547
-[SETUP] Creating student dir:  ./stuwork/Fwuff547
-[FRESH & CLEAN] @ ./stuwork/Fwuff547/think-java-Fwuff547
+[CLEANUP] Removing project dir: ./stuwork/Fwuff547/think-java-Fwuff547
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Fwuff547.git]
 Cloning into 'think-java-Fwuff547'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-Fwuff547'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -38,20 +38,27 @@ Seconds since midnight: 42630
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
 
 </pre></body></html>
