--- a/stuwork/Jake4902.think-java_results.html
+++ b/stuwork/Jake4902.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Jake4902
-[SETUP] Creating student dir:  ./stuwork/Jake4902
-[FRESH & CLEAN] @ ./stuwork/Jake4902/think-java-Jake4902
+[CLEANUP] Removing project dir: ./stuwork/Jake4902/think-java-Jake4902
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Jake4902.git]
 Cloning into 'think-java-Jake4902'...
@@ -16,18 +15,24 @@ Cloning into 'think-java-Jake4902'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.00
 
 </pre></body></html>
