--- a/stuwork/ReidLuhn.think-java_results.html
+++ b/stuwork/ReidLuhn.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] ReidLuhn
-[SETUP] Creating student dir:  ./stuwork/ReidLuhn
-[FRESH & CLEAN] @ ./stuwork/ReidLuhn/think-java-ReidLuhn
+[CLEANUP] Removing project dir: ./stuwork/ReidLuhn/think-java-ReidLuhn
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-ReidLuhn.git]
 Cloning into 'think-java-ReidLuhn'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-ReidLuhn'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -39,9 +39,11 @@ Hello world!
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -54,13 +56,18 @@ Hello world!
 -->
 	[ERROR] Runtime Error @ java Exercise4
 
+[SUMMARY] ['Exercise3: RUNTIME ERROR', 'Exercise4: RUNTIME ERROR']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.50
 
 </pre></body></html>
