--- a/stuwork/banjojeebus.think-java_results.html
+++ b/stuwork/banjojeebus.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] banjojeebus
-[SETUP] Creating student dir:  ./stuwork/banjojeebus
-[FRESH & CLEAN] @ ./stuwork/banjojeebus/think-java-banjojeebus
+[CLEANUP] Removing project dir: ./stuwork/banjojeebus/think-java-banjojeebus
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
 Cloning into 'think-java-banjojeebus'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-banjojeebus'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -36,14 +36,19 @@ Seconds remaining: 39870
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
 
 </pre></body></html>
