--- a/stuwork/bealarson82.think-java_results.html
+++ b/stuwork/bealarson82.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] bealarson82
-[SETUP] Creating student dir:  ./stuwork/bealarson82
-[FRESH & CLEAN] @ ./stuwork/bealarson82/think-java-bealarson82
+[CLEANUP] Removing project dir: ./stuwork/bealarson82/think-java-bealarson82
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
 Cloning into 'think-java-bealarson82'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-bealarson82'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -35,14 +35,19 @@ Hello World!
 
 [COMPILING] Time.java
 	[SUCCESSFUL COMPILE] Time.java
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
 
 </pre></body></html>
