--- a/stuwork/coleschomer.think-java_results.html
+++ b/stuwork/coleschomer.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] coleschomer
-[SETUP] Creating student dir:  ./stuwork/coleschomer
-[FRESH & CLEAN] @ ./stuwork/coleschomer/think-java-coleschomer
+[CLEANUP] Removing project dir: ./stuwork/coleschomer/think-java-coleschomer
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-coleschomer.git]
 Cloning into 'think-java-coleschomer'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-coleschomer'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -30,14 +30,19 @@ American Format:
 
 [COMPILING] Time.java
 	[ERROR] Missing Compile Target:Time.java
+[SUMMARY] ['Date: PASS', 'Time: MISSING']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.00
 
 </pre></body></html>
