--- a/stuwork/jadenngo13.think-java_results.html
+++ b/stuwork/jadenngo13.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] jadenngo13
-[SETUP] Creating student dir:  ./stuwork/jadenngo13
-[FRESH & CLEAN] @ ./stuwork/jadenngo13/think-java-jadenngo13
+[CLEANUP] Removing project dir: ./stuwork/jadenngo13/think-java-jadenngo13
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-jadenngo13.git]
 Cloning into 'think-java-jadenngo13'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-jadenngo13'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -49,9 +49,11 @@ American Format:
 			                                                       ^
 	6 errors
 	
+[SUMMARY] ['Date: PASS', 'Time: COMPILE ERROR']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[SUCCESSFUL COMPILE] Exercise3.java
 [RUNNING] Exercise3
@@ -66,19 +68,24 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 50
-	You were off by: 37
+	The number I was thinking of was: 60
+	You were off by: 47
 	
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Exercise3: PASS', 'Exercise4: PASS']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.50
 
 </pre></body></html>
