--- a/stuwork/kaifouts.think-java_results.html
+++ b/stuwork/kaifouts.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] kaifouts
-[SETUP] Creating student dir:  ./stuwork/kaifouts
-[FRESH & CLEAN] @ ./stuwork/kaifouts/think-java-kaifouts
+[CLEANUP] Removing project dir: ./stuwork/kaifouts/think-java-kaifouts
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
 Cloning into 'think-java-kaifouts'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-kaifouts'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -38,14 +38,19 @@ Time:
 <--
 	[OUTPUT OK]
 
+[SUMMARY] ['Date: PASS', 'Time: PASS']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.20
 
 </pre></body></html>
