--- a/stuwork/notswett.think-java_results.html
+++ b/stuwork/notswett.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] notswett
-[SETUP] Creating student dir:  ./stuwork/notswett
-[FRESH & CLEAN] @ ./stuwork/notswett/think-java-notswett
+[CLEANUP] Removing project dir: ./stuwork/notswett/think-java-notswett
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-notswett.git]
 Cloning into 'think-java-notswett'...
@@ -16,18 +15,24 @@ Cloning into 'think-java-notswett'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.00
 
 </pre></body></html>
