--- a/stuwork/slammensam.think-java_results.html
+++ b/stuwork/slammensam.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] slammensam
-[SETUP] Creating student dir:  ./stuwork/slammensam
-[FRESH & CLEAN] @ ./stuwork/slammensam/think-java-slammensam
+[CLEANUP] Removing project dir: ./stuwork/slammensam/think-java-slammensam
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-slammensam.git]
 Cloning into 'think-java-slammensam'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-slammensam'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -36,17 +36,23 @@ American Date:
 	  location: variable out of type PrintStream
 	1 error
 	
+[SUMMARY] ['Date: PASS', 'Time: COMPILE ERROR']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.10
 
 </pre></body></html>
