--- a/stuwork/tpipitone.think-java_results.html
+++ b/stuwork/tpipitone.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] tpipitone
-[SETUP] Creating student dir:  ./stuwork/tpipitone
-[FRESH & CLEAN] @ ./stuwork/tpipitone/think-java-tpipitone
+[CLEANUP] Removing project dir: ./stuwork/tpipitone/think-java-tpipitone
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-tpipitone.git]
 Cloning into 'think-java-tpipitone'...
@@ -16,6 +15,7 @@ Cloning into 'think-java-tpipitone'...
 [GITWORK DONE]
 
 *[BEGIN chapter2]
+  [EXPECTED TARGETS] ['Date', 'Time']]
 [COMPILING] Date.java
 	[SUCCESSFUL COMPILE] Date.java
 [RUNNING] Date
@@ -35,20 +35,27 @@ Tuesday
 -->
 	[ERROR] Runtime Error @ java Time
 
+[SUMMARY] ['Date: PASS', 'Time: RUNTIME ERROR']
 [DONE chapter2]
 
 *[BEGIN chapter3]
+  [EXPECTED TARGETS] ['Exercise3', 'Exercise4']]
 [COMPILING] Exercise3.java
 	[ERROR] Missing Compile Target:Exercise3.java
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
+[SUMMARY] ['Exercise3: MISSING', 'Exercise4: MISSING']
 [DONE chapter3]
 
 *[BEGIN chapter4]
+  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
 [COMPILING] Exercise4.java
 	[ERROR] Missing Compile Target:Exercise4.java
 [COMPILING] Exercise5.java
 	[ERROR] Missing Compile Target:Exercise5.java
+[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
 [DONE chapter4]
+[ASSIGNMENT DONE] asignment_1
+          [SCORE] 0.15
 
 </pre></body></html>
