"report check in 2018-09-17"

--- a/stuwork/Crevin921.think-java_results.html
+++ b/stuwork/Crevin921.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: Crevin921
 <br>Project: think-java
 <br>
@@ -7,6 +7,7 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Crevin921
+[SETUP] Creating student dir:  ./stuwork/Crevin921
 [FRESH & CLEAN] @ ./stuwork/Crevin921/think-java-Crevin921
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Crevin921.git]
