--- a/stuwork/MegaMichael1000.think-java_results.html
+++ b/stuwork/MegaMichael1000.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: MegaMichael1000
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] MegaMichael1000
-[CLEANUP] Removing project dir: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
+[SETUP] Creating student dir:  ./stuwork/MegaMichael1000
+[FRESH & CLEAN] @ ./stuwork/MegaMichael1000/think-java-MegaMichael1000
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-MegaMichael1000.git]
 Cloning into 'think-java-MegaMichael1000'...
