--- a/stuwork/aliyaaware.think-java_results.html
+++ b/stuwork/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] aliyaaware
-[CLEANUP] Removing project dir: ./stuwork/aliyaaware/think-java-aliyaaware
+[SETUP] Creating student dir:  ./stuwork/aliyaaware
+[FRESH & CLEAN] @ ./stuwork/aliyaaware/think-java-aliyaaware
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-aliyaaware.git]
 Cloning into 'think-java-aliyaaware'...
@@ -29,13 +30,13 @@ American format:
 	[OUTPUT OK]
 
 [COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:10: error: ')' expected
+	[ERROR] javac failed Time.java Time.java:10: ')' expected
 			System.out.println("It has been "answer+ " seconds since midnight");
 			                                 ^
-	Time.java:10: error: not a statement
+	Time.java:10: not a statement
 			System.out.println("It has been "answer+ " seconds since midnight");
 			                                       ^
-	Time.java:10: error: ';' expected
+	Time.java:10: ';' expected
 			System.out.println("It has been "answer+ " seconds since midnight");
 			                                                                  ^
 	3 errors
