--- a/stuwork/heypoppins.think-java_results.html
+++ b/stuwork/heypoppins.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: heypoppins
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] heypoppins
-[CLEANUP] Removing project dir: ./stuwork/heypoppins/think-java-heypoppins
+[SETUP] Creating student dir:  ./stuwork/heypoppins
+[FRESH & CLEAN] @ ./stuwork/heypoppins/think-java-heypoppins
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-heypoppins.git]
 Cloning into 'think-java-heypoppins'...
