--- a/stuwork/tpipitone.think-java_results.html
+++ b/stuwork/tpipitone.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: tpipitone
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] tpipitone
-[CLEANUP] Removing project dir: ./stuwork/tpipitone/think-java-tpipitone
+[SETUP] Creating student dir:  ./stuwork/tpipitone
+[FRESH & CLEAN] @ ./stuwork/tpipitone/think-java-tpipitone
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-tpipitone.git]
 Cloning into 'think-java-tpipitone'...
