--- a/stuwork/AdamRashid.think-java_results.html
+++ b/stuwork/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[CLEANUP] Removing project dir: ./stuwork/AdamRashid/think-java-AdamRashid
+[SETUP] Creating student dir:  ./stuwork/AdamRashid
+[FRESH & CLEAN] @ ./stuwork/AdamRashid/think-java-AdamRashid
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
 Cloning into 'think-java-AdamRashid'...
@@ -65,8 +66,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 37
-	You were off by: 24
+	The number I was thinking of is: 32
+	You were off by: 19
 	
 <--
 	[OUTPUT OK]
