--- a/stuwork/DrKiefer.think-java_results.html
+++ b/stuwork/DrKiefer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: DrKiefer
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] DrKiefer
-[CLEANUP] Removing project dir: ./stuwork/DrKiefer/think-java-DrKiefer
+[SETUP] Creating student dir:  ./stuwork/DrKiefer
+[FRESH & CLEAN] @ ./stuwork/DrKiefer/think-java-DrKiefer
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-DrKiefer.git]
 Cloning into 'think-java-DrKiefer'...
