--- a/stuwork/Fwuff547.think-java_results.html
+++ b/stuwork/Fwuff547.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: Fwuff547
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Fwuff547
-[CLEANUP] Removing project dir: ./stuwork/Fwuff547/think-java-Fwuff547
+[SETUP] Creating student dir:  ./stuwork/Fwuff547
+[FRESH & CLEAN] @ ./stuwork/Fwuff547/think-java-Fwuff547
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Fwuff547.git]
 Cloning into 'think-java-Fwuff547'...
