--- a/stuwork/Jake4902.think-java_results.html
+++ b/stuwork/Jake4902.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: Jake4902
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Jake4902
-[CLEANUP] Removing project dir: ./stuwork/Jake4902/think-java-Jake4902
+[SETUP] Creating student dir:  ./stuwork/Jake4902
+[FRESH & CLEAN] @ ./stuwork/Jake4902/think-java-Jake4902
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Jake4902.git]
 Cloning into 'think-java-Jake4902'...
