--- a/stuwork/Marcus620.think-java_results.html
+++ b/stuwork/Marcus620.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: Marcus620
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] Marcus620
-[CLEANUP] Removing project dir: ./stuwork/Marcus620/think-java-Marcus620
+[SETUP] Creating student dir:  ./stuwork/Marcus620
+[FRESH & CLEAN] @ ./stuwork/Marcus620/think-java-Marcus620
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
 Cloning into 'think-java-Marcus620'...
