--- a/stuwork/NickPoletti1.think-java_results.html
+++ b/stuwork/NickPoletti1.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: NickPoletti1
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] NickPoletti1
-[CLEANUP] Removing project dir: ./stuwork/NickPoletti1/think-java-NickPoletti1
+[SETUP] Creating student dir:  ./stuwork/NickPoletti1
+[FRESH & CLEAN] @ ./stuwork/NickPoletti1/think-java-NickPoletti1
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-NickPoletti1.git]
 Cloning into 'think-java-NickPoletti1'...
@@ -69,8 +70,8 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 25
-	Your guess was off by: 12
+	The number I was thinking of was 55
+	Your guess was off by: 42
 	
 <--
 	[OUTPUT OK]
