--- a/stuwork/ReidLuhn.think-java_results.html
+++ b/stuwork/ReidLuhn.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: ReidLuhn
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] ReidLuhn
-[CLEANUP] Removing project dir: ./stuwork/ReidLuhn/think-java-ReidLuhn
+[SETUP] Creating student dir:  ./stuwork/ReidLuhn
+[FRESH & CLEAN] @ ./stuwork/ReidLuhn/think-java-ReidLuhn
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-ReidLuhn.git]
 Cloning into 'think-java-ReidLuhn'...
