--- a/stuwork/asianaaron2.think-java_results.html
+++ b/stuwork/asianaaron2.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: asianaaron2
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[CLEANUP] Removing project dir: ./stuwork/asianaaron2/think-java-asianaaron2
+[SETUP] Creating student dir:  ./stuwork/asianaaron2
+[FRESH & CLEAN] @ ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
 Cloning into 'think-java-asianaaron2'...
