--- a/stuwork/banjojeebus.think-java_results.html
+++ b/stuwork/banjojeebus.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: banjojeebus
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] banjojeebus
-[CLEANUP] Removing project dir: ./stuwork/banjojeebus/think-java-banjojeebus
+[SETUP] Creating student dir:  ./stuwork/banjojeebus
+[FRESH & CLEAN] @ ./stuwork/banjojeebus/think-java-banjojeebus
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
 Cloning into 'think-java-banjojeebus'...
