--- a/stuwork/bealarson82.think-java_results.html
+++ b/stuwork/bealarson82.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: bealarson82
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] bealarson82
-[CLEANUP] Removing project dir: ./stuwork/bealarson82/think-java-bealarson82
+[SETUP] Creating student dir:  ./stuwork/bealarson82
+[FRESH & CLEAN] @ ./stuwork/bealarson82/think-java-bealarson82
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
 Cloning into 'think-java-bealarson82'...
