--- a/stuwork/bethtojatjar.think-java_results.html
+++ b/stuwork/bethtojatjar.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: bethtojatjar
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] bethtojatjar
-[CLEANUP] Removing project dir: ./stuwork/bethtojatjar/think-java-bethtojatjar
+[SETUP] Creating student dir:  ./stuwork/bethtojatjar
+[FRESH & CLEAN] @ ./stuwork/bethtojatjar/think-java-bethtojatjar
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bethtojatjar.git]
 Cloning into 'think-java-bethtojatjar'...
