--- a/stuwork/gaberoessler.think-java_results.html
+++ b/stuwork/gaberoessler.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: gaberoessler
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] gaberoessler
-[CLEANUP] Removing project dir: ./stuwork/gaberoessler/think-java-gaberoessler
+[SETUP] Creating student dir:  ./stuwork/gaberoessler
+[FRESH & CLEAN] @ ./stuwork/gaberoessler/think-java-gaberoessler
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
 Cloning into 'think-java-gaberoessler'...
