--- a/stuwork/jadenngo13.think-java_results.html
+++ b/stuwork/jadenngo13.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: jadenngo13
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] jadenngo13
-[CLEANUP] Removing project dir: ./stuwork/jadenngo13/think-java-jadenngo13
+[SETUP] Creating student dir:  ./stuwork/jadenngo13
+[FRESH & CLEAN] @ ./stuwork/jadenngo13/think-java-jadenngo13
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-jadenngo13.git]
 Cloning into 'think-java-jadenngo13'...
@@ -29,22 +30,22 @@ American Format:
 	[OUTPUT OK]
 
 [COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:10: error: ';' expected
+	[ERROR] javac failed Time.java Time.java:10: ';' expected
 			hour = 12
 			         ^
-	Time.java:11: error: ';' expected
+	Time.java:11: ';' expected
 			minute = 15
 			           ^
-	Time.java:12: error: ';' expected
+	Time.java:12: ';' expected
 			second = 5
 			          ^
-	Time.java:14: error: ';' expected
+	Time.java:14: ';' expected
 			time_since_midnight = 24 - hour
 			                               ^
-	Time.java:16: error: illegal start of expression
+	Time.java:16: illegal start of expression
 			System.out.println("Number of seconds since midnight: " + );
 			                                                          ^
-	Time.java:17: error: illegal start of expression
+	Time.java:17: illegal start of expression
 			System.out.println("Number of seconds left in day: " + );
 			                                                       ^
 	6 errors
@@ -68,8 +69,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 60
-	You were off by: 47
+	The number I was thinking of was: 62
+	You were off by: 49
 	
 <--
 	[OUTPUT OK]
