--- a/stuwork/maxckaeh.think-java_results.html
+++ b/stuwork/maxckaeh.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: maxckaeh
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] maxckaeh
-[CLEANUP] Removing project dir: ./stuwork/maxckaeh/think-java-maxckaeh
+[SETUP] Creating student dir:  ./stuwork/maxckaeh
+[FRESH & CLEAN] @ ./stuwork/maxckaeh/think-java-maxckaeh
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-maxckaeh.git]
 Cloning into 'think-java-maxckaeh'...
