--- a/stuwork/shanebaxter101.think-java_results.html
+++ b/stuwork/shanebaxter101.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-09-16
+Run date: 2018-09-17
 <br>Student User: shanebaxter101
 <br>Project: think-java
 <br>
@@ -7,7 +7,8 @@ Run date: 2018-09-16
 
 ----------------------------------------------------------
 [STUDENT INIT] shanebaxter101
-[CLEANUP] Removing project dir: ./stuwork/shanebaxter101/think-java-shanebaxter101
+[SETUP] Creating student dir:  ./stuwork/shanebaxter101
+[FRESH & CLEAN] @ ./stuwork/shanebaxter101/think-java-shanebaxter101
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-shanebaxter101.git]
 Cloning into 'think-java-shanebaxter101'...
