"report check in 2018-09-17"

--- a/stuwork/1amsmith1020.think-java_results.html
+++ b/stuwork/1amsmith1020.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] 1amsmith1020
-[SETUP] Creating student dir:  ./stuwork/1amsmith1020
-[FRESH & CLEAN] @ ./stuwork/1amsmith1020/think-java-1amsmith1020
+[CLEANUP] Removing project dir: ./stuwork/1amsmith1020/think-java-1amsmith1020
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-1amsmith1020.git]
 Cloning into 'think-java-1amsmith1020'...
@@ -54,14 +53,12 @@ Seconds since midnight:39494
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
+[SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.40
 
 </pre></body></html>
