--- a/stuwork/AdamRashid.think-java_results.html
+++ b/stuwork/AdamRashid.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] AdamRashid
-[SETUP] Creating student dir:  ./stuwork/AdamRashid
-[FRESH & CLEAN] @ ./stuwork/AdamRashid/think-java-AdamRashid
+[CLEANUP] Removing project dir: ./stuwork/AdamRashid/think-java-AdamRashid
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-AdamRashid.git]
 Cloning into 'think-java-AdamRashid'...
@@ -66,8 +65,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 32
-	You were off by: 19
+	The number I was thinking of is: 60
+	You were off by: 47
 	
 <--
 	[OUTPUT OK]
@@ -76,14 +75,22 @@ I'm thinking of a number between 1 and 100(Including Both)
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+5.0
+	1.0606601717798212
+	5.298317366548037
+	1.1241498650869424
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.60
+          [SCORE] 1.00
 
 </pre></body></html>
