--- a/stuwork/MegaMichael1000.think-java_results.html
+++ b/stuwork/MegaMichael1000.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] MegaMichael1000
-[SETUP] Creating student dir:  ./stuwork/MegaMichael1000
-[FRESH & CLEAN] @ ./stuwork/MegaMichael1000/think-java-MegaMichael1000
+[CLEANUP] Removing project dir: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-MegaMichael1000.git]
 Cloning into 'think-java-MegaMichael1000'...
@@ -48,14 +47,12 @@ Seconds since midnight: 44520.0
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
+[SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.40
 
 </pre></body></html>
