--- a/stuwork/aliyaaware.think-java_results.html
+++ b/stuwork/aliyaaware.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] aliyaaware
-[SETUP] Creating student dir:  ./stuwork/aliyaaware
-[FRESH & CLEAN] @ ./stuwork/aliyaaware/think-java-aliyaaware
+[CLEANUP] Removing project dir: ./stuwork/aliyaaware/think-java-aliyaaware
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-aliyaaware.git]
 Cloning into 'think-java-aliyaaware'...
@@ -58,14 +57,16 @@ American format:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] javac failed Multadd.java Multadd.java:21: missing return statement
+		}
+		^
+	1 error
+	
+[SUMMARY] ['Multadd: COMPILE ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.25
+          [SCORE] 0.55
 
 </pre></body></html>
