--- a/stuwork/jadenngo13.think-java_results.html
+++ b/stuwork/jadenngo13.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] jadenngo13
-[SETUP] Creating student dir:  ./stuwork/jadenngo13
-[FRESH & CLEAN] @ ./stuwork/jadenngo13/think-java-jadenngo13
+[CLEANUP] Removing project dir: ./stuwork/jadenngo13/think-java-jadenngo13
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-jadenngo13.git]
 Cloning into 'think-java-jadenngo13'...
@@ -69,8 +68,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 62
-	You were off by: 49
+	The number I was thinking of was: 89
+	You were off by: 76
 	
 <--
 	[OUTPUT OK]
@@ -79,14 +78,21 @@ Enter a number: Your guess is: 13
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+13.049999999999999
+	1.0606601717798212
+	1.2160974411794894
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.50
+          [SCORE] 0.90
 
 </pre></body></html>
