--- a/stuwork/maxckaeh.think-java_results.html
+++ b/stuwork/maxckaeh.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] maxckaeh
-[SETUP] Creating student dir:  ./stuwork/maxckaeh
-[FRESH & CLEAN] @ ./stuwork/maxckaeh/think-java-maxckaeh
+[CLEANUP] Removing project dir: ./stuwork/maxckaeh/think-java-maxckaeh
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-maxckaeh.git]
 Cloning into 'think-java-maxckaeh'...
@@ -53,14 +52,20 @@ American Format:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+1.0606601717798212
+	1.2005440615054193
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.60
 
 </pre></body></html>
