--- a/stuwork/slammensam.think-java_results.html
+++ b/stuwork/slammensam.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] slammensam
-[SETUP] Creating student dir:  ./stuwork/slammensam
-[FRESH & CLEAN] @ ./stuwork/slammensam/think-java-slammensam
+[CLEANUP] Removing project dir: ./stuwork/slammensam/think-java-slammensam
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-slammensam.git]
 Cloning into 'think-java-slammensam'...
@@ -46,14 +45,12 @@ American Date:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
+[SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.10
+          [SCORE] 0.30
 
 </pre></body></html>
