--- a/stuwork/Crevin921.think-java_results.html
+++ b/stuwork/Crevin921.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] Crevin921
-[SETUP] Creating student dir:  ./stuwork/Crevin921
-[FRESH & CLEAN] @ ./stuwork/Crevin921/think-java-Crevin921
+[CLEANUP] Removing project dir: ./stuwork/Crevin921/think-java-Crevin921
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Crevin921.git]
 Cloning into 'think-java-Crevin921'...
@@ -30,7 +29,7 @@ Cloning into 'think-java-Crevin921'...
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
