--- a/stuwork/DrKiefer.think-java_results.html
+++ b/stuwork/DrKiefer.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] DrKiefer
-[SETUP] Creating student dir:  ./stuwork/DrKiefer
-[FRESH & CLEAN] @ ./stuwork/DrKiefer/think-java-DrKiefer
+[CLEANUP] Removing project dir: ./stuwork/DrKiefer/think-java-DrKiefer
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-DrKiefer.git]
 Cloning into 'think-java-DrKiefer'...
@@ -60,14 +59,12 @@ Time Since Midnight: 12: 0: 21
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
+[SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.50
+          [SCORE] 0.70
 
 </pre></body></html>
