--- a/stuwork/Fwuff547.think-java_results.html
+++ b/stuwork/Fwuff547.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] Fwuff547
-[SETUP] Creating student dir:  ./stuwork/Fwuff547
-[FRESH & CLEAN] @ ./stuwork/Fwuff547/think-java-Fwuff547
+[CLEANUP] Removing project dir: ./stuwork/Fwuff547/think-java-Fwuff547
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Fwuff547.git]
 Cloning into 'think-java-Fwuff547'...
@@ -52,14 +51,21 @@ Seconds since midnight: 42630
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+The result is 5.0
+	The result is: 1.0606601717798212
+	The result is: 1.0303150673048738
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.60
 
 </pre></body></html>
