--- a/stuwork/Jake4902.think-java_results.html
+++ b/stuwork/Jake4902.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] Jake4902
-[SETUP] Creating student dir:  ./stuwork/Jake4902
-[FRESH & CLEAN] @ ./stuwork/Jake4902/think-java-Jake4902
+[CLEANUP] Removing project dir: ./stuwork/Jake4902/think-java-Jake4902
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Jake4902.git]
 Cloning into 'think-java-Jake4902'...
@@ -30,7 +29,7 @@ Cloning into 'think-java-Jake4902'...
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
