--- a/stuwork/KaylaRidesBikes.think-java_results.html
+++ b/stuwork/KaylaRidesBikes.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] KaylaRidesBikes
-[SETUP] Creating student dir:  ./stuwork/KaylaRidesBikes
-[FRESH & CLEAN] @ ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
+[CLEANUP] Removing project dir: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-KaylaRidesBikes.git]
 Cloning into 'think-java-KaylaRidesBikes'...
@@ -40,7 +39,7 @@ American Format:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
