--- a/stuwork/Marcus620.think-java_results.html
+++ b/stuwork/Marcus620.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] Marcus620
-[SETUP] Creating student dir:  ./stuwork/Marcus620
-[FRESH & CLEAN] @ ./stuwork/Marcus620/think-java-Marcus620
+[CLEANUP] Removing project dir: ./stuwork/Marcus620/think-java-Marcus620
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
 Cloning into 'think-java-Marcus620'...
@@ -26,7 +25,7 @@ Cloning into 'think-java-Marcus620'...
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
