--- a/stuwork/NickPoletti1.think-java_results.html
+++ b/stuwork/NickPoletti1.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] NickPoletti1
-[SETUP] Creating student dir:  ./stuwork/NickPoletti1
-[FRESH & CLEAN] @ ./stuwork/NickPoletti1/think-java-NickPoletti1
+[CLEANUP] Removing project dir: ./stuwork/NickPoletti1/think-java-NickPoletti1
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-NickPoletti1.git]
 Cloning into 'think-java-NickPoletti1'...
@@ -70,8 +69,8 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 55
-	Your guess was off by: 42
+	The number I was thinking of was 46
+	Your guess was off by: 33
 	
 <--
 	[OUTPUT OK]
@@ -80,14 +79,16 @@ Exercise4!
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+	[ERROR] Runtime Error @ java Multadd
+
+[SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.60
+          [SCORE] 0.95
 
 </pre></body></html>
