--- a/stuwork/ReidLuhn.think-java_results.html
+++ b/stuwork/ReidLuhn.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] ReidLuhn
-[SETUP] Creating student dir:  ./stuwork/ReidLuhn
-[FRESH & CLEAN] @ ./stuwork/ReidLuhn/think-java-ReidLuhn
+[CLEANUP] Removing project dir: ./stuwork/ReidLuhn/think-java-ReidLuhn
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-ReidLuhn.git]
 Cloning into 'think-java-ReidLuhn'...
@@ -61,14 +60,22 @@ Hello world!
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+Up and running!
+	The answer is: 5.0
+	The answer is: 1.0606601717798212
+	The answer is: 1.096640888228596
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.50
+          [SCORE] 0.90
 
 </pre></body></html>
