--- a/stuwork/asianaaron2.think-java_results.html
+++ b/stuwork/asianaaron2.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] asianaaron2
-[SETUP] Creating student dir:  ./stuwork/asianaaron2
-[FRESH & CLEAN] @ ./stuwork/asianaaron2/think-java-asianaaron2
+[CLEANUP] Removing project dir: ./stuwork/asianaaron2/think-java-asianaaron2
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-asianaaron2.git]
 Cloning into 'think-java-asianaaron2'...
@@ -55,7 +54,7 @@ The number of seconds since midnight: 83505seconds
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
