--- a/stuwork/banjojeebus.think-java_results.html
+++ b/stuwork/banjojeebus.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] banjojeebus
-[SETUP] Creating student dir:  ./stuwork/banjojeebus
-[FRESH & CLEAN] @ ./stuwork/banjojeebus/think-java-banjojeebus
+[CLEANUP] Removing project dir: ./stuwork/banjojeebus/think-java-banjojeebus
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
 Cloning into 'think-java-banjojeebus'...
@@ -46,7 +45,7 @@ Seconds remaining: 39870
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
