--- a/stuwork/bealarson82.think-java_results.html
+++ b/stuwork/bealarson82.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] bealarson82
-[SETUP] Creating student dir:  ./stuwork/bealarson82
-[FRESH & CLEAN] @ ./stuwork/bealarson82/think-java-bealarson82
+[CLEANUP] Removing project dir: ./stuwork/bealarson82/think-java-bealarson82
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
 Cloning into 'think-java-bealarson82'...
@@ -45,7 +44,7 @@ Hello World!
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
