--- a/stuwork/bethtojatjar.think-java_results.html
+++ b/stuwork/bethtojatjar.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] bethtojatjar
-[SETUP] Creating student dir:  ./stuwork/bethtojatjar
-[FRESH & CLEAN] @ ./stuwork/bethtojatjar/think-java-bethtojatjar
+[CLEANUP] Removing project dir: ./stuwork/bethtojatjar/think-java-bethtojatjar
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bethtojatjar.git]
 Cloning into 'think-java-bethtojatjar'...
@@ -49,14 +48,16 @@ The amount of seconds since midnight is: 39780 seconds
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+	[ERROR] Runtime Error @ java Multadd
+
+[SUMMARY] ['Multadd: RUNTIME ERROR']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.55
 
 </pre></body></html>
