--- a/stuwork/coleschomer.think-java_results.html
+++ b/stuwork/coleschomer.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] coleschomer
-[SETUP] Creating student dir:  ./stuwork/coleschomer
-[FRESH & CLEAN] @ ./stuwork/coleschomer/think-java-coleschomer
+[CLEANUP] Removing project dir: ./stuwork/coleschomer/think-java-coleschomer
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-coleschomer.git]
 Cloning into 'think-java-coleschomer'...
@@ -40,7 +39,7 @@ American Format:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
