--- a/stuwork/gaberoessler.think-java_results.html
+++ b/stuwork/gaberoessler.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] gaberoessler
-[SETUP] Creating student dir:  ./stuwork/gaberoessler
-[FRESH & CLEAN] @ ./stuwork/gaberoessler/think-java-gaberoessler
+[CLEANUP] Removing project dir: ./stuwork/gaberoessler/think-java-gaberoessler
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
 Cloning into 'think-java-gaberoessler'...
@@ -53,14 +52,20 @@ Tuesday
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+The result is 5.0
+	The result is 1.0606601717798212
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.60
 
 </pre></body></html>
