--- a/stuwork/heypoppins.think-java_results.html
+++ b/stuwork/heypoppins.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] heypoppins
-[SETUP] Creating student dir:  ./stuwork/heypoppins
-[FRESH & CLEAN] @ ./stuwork/heypoppins/think-java-heypoppins
+[CLEANUP] Removing project dir: ./stuwork/heypoppins/think-java-heypoppins
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-heypoppins.git]
 Cloning into 'think-java-heypoppins'...
@@ -26,7 +25,7 @@ Cloning into 'think-java-heypoppins'...
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
