--- a/stuwork/kaifouts.think-java_results.html
+++ b/stuwork/kaifouts.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] kaifouts
-[SETUP] Creating student dir:  ./stuwork/kaifouts
-[FRESH & CLEAN] @ ./stuwork/kaifouts/think-java-kaifouts
+[CLEANUP] Removing project dir: ./stuwork/kaifouts/think-java-kaifouts
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
 Cloning into 'think-java-kaifouts'...
@@ -48,7 +47,7 @@ Time:
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
+  [EXPECTED TARGETS] ['Multadd']]
 	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
