--- a/stuwork/notswett.think-java_results.html
+++ b/stuwork/notswett.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] notswett
-[SETUP] Creating student dir:  ./stuwork/notswett
-[FRESH & CLEAN] @ ./stuwork/notswett/think-java-notswett
+[CLEANUP] Removing project dir: ./stuwork/notswett/think-java-notswett
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-notswett.git]
 Cloning into 'think-java-notswett'...
@@ -26,12 +25,10 @@ Cloning into 'think-java-notswett'...
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
+[SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
           [SCORE] 0.00
