--- a/stuwork/shanebaxter101.think-java_results.html
+++ b/stuwork/shanebaxter101.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] shanebaxter101
-[SETUP] Creating student dir:  ./stuwork/shanebaxter101
-[FRESH & CLEAN] @ ./stuwork/shanebaxter101/think-java-shanebaxter101
+[CLEANUP] Removing project dir: ./stuwork/shanebaxter101/think-java-shanebaxter101
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-shanebaxter101.git]
 Cloning into 'think-java-shanebaxter101'...
@@ -54,14 +53,21 @@ It has been: 42812.0 seconds since midnight
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+20.419999999999998
+	1.0606601717798212
+	1.0640624148157594
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] ['Multadd: PASS']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.20
+          [SCORE] 0.60
 
 </pre></body></html>
