--- a/stuwork/tpipitone.think-java_results.html
+++ b/stuwork/tpipitone.think-java_results.html
@@ -7,8 +7,7 @@ Run date: 2018-09-17
 
 ----------------------------------------------------------
 [STUDENT INIT] tpipitone
-[SETUP] Creating student dir:  ./stuwork/tpipitone
-[FRESH & CLEAN] @ ./stuwork/tpipitone/think-java-tpipitone
+[CLEANUP] Removing project dir: ./stuwork/tpipitone/think-java-tpipitone
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-tpipitone.git]
 Cloning into 'think-java-tpipitone'...
@@ -49,14 +48,12 @@ Tuesday
 [DONE chapter3]
 
 *[BEGIN chapter4]
-  [EXPECTED TARGETS] ['Exercise4', 'Exercise5']]
-[COMPILING] Exercise4.java
-	[ERROR] Missing Compile Target:Exercise4.java
-[COMPILING] Exercise5.java
-	[ERROR] Missing Compile Target:Exercise5.java
-[SUMMARY] ['Exercise4: MISSING', 'Exercise5: MISSING']
+  [EXPECTED TARGETS] ['Multadd']]
+[COMPILING] Multadd.java
+	[ERROR] Missing Compile Target:Multadd.java
+[SUMMARY] ['Multadd: MISSING']
 [DONE chapter4]
 [ASSIGNMENT DONE] asignment_1
-          [SCORE] 0.15
+          [SCORE] 0.35
 
 </pre></body></html>
